--- a/configs/conf.yaml
+++ b/configs/conf.yaml
@@ -2,7 +2,7 @@
 # Where to store logs/checkpoints
 
 tensorboard_log_dir: "log_dir"
-data_folder: "/kaggle/input"
+data_folder: "data/"
 checkpoints_folder: "checkpoints/srgan"
 
 
@@ -14,19 +14,19 @@ downsampling_factor: 4
 
 num_res_block: 16
 
-adv_loss_rate: 1e-3
+adv_loss_rate: 0.001
 
 adam_b: 0.9
 
-lr: 1e-4
+lr: 0.0001
 
-lr_step_size: 1e5
+lr_step_size: 10000
 
 lr_step: 0.1
 
 
 
-batch_size: 4
+batch_size: 1
 
-num_workers: 8
+num_workers: 4
 
